--- a/superheroes.html
+++ b/superheroes.html
@@ -7,20 +7,24 @@
     <title>Superhéroes</title>
 </head>
 <body>
-    <h1 id="arriba">Superhéroes</h1>
+    <h1>Superhéroes</h1>
+    <!-- Esta es la primer sección del artículo -->
     <section>
         <h2>Superman</h2>
+        <!-- Este vínculo va a abrir en una ventana nueva -->
         <a 
             href="https://es.wikipedia.org/wiki/Superman"
             target="_blank">
             Información de Superman en Wikipedia
         </a>
         <p>Ver avance de la película
+            <!-- Este vínculo va a abrir en la misma ventana -->
             <a href="https://www.youtube.com/watch?v=-DuFvqNSAOE&t=17s">
                 El Regreso de Superman
             </a>
         </p>
     </section>
+    <!-- Esta es la segunda sección del artículo -->
     <section>
         <h2>El Hombre Araña</h2>
         <a href="https://es.wikipedia.org/wiki/Spider-Man" target="_blank">
@@ -32,6 +36,7 @@
             </a>
         </p>
     </section>
+    <!-- Esta es la tercera sección del artículo -->
     <section>
         <h2>Iron Man</h2>
         <a href="https://es.wikipedia.org/wiki/Iron_Man" target="_blank">
